Added return and else